adding naming standards

--- a/Content/programs.html
+++ b/Content/programs.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>David Hernandez</title>
     <!-- <link href="https://www.chapman.edu/_files/css/style_2013.css" rel="sytlesheet"$ -->
-    <link href="programs.css" rel="stylesheet" type="text/css"/>
+    <link href="CssFiles/Programs.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
