--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -1,7 +1,7 @@
 <!--Navigation bar -->
 <div id="navigation">
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="Index.html">Home</a></li>
     <li><a>Career</a>
       <ul>
         <li id="generalAtomics"><a>General Atomics</a></li>
@@ -10,8 +10,8 @@
     </li>
     <li><a>Accomplishments</a>
       <ul>
-        <li><a href="programs.html">Programs</a></li>
-        <li><a href="resume.html">Resumé</a></li>
+        <li><a href="Programs.html">Programs</a></li>
+        <li><a href="Resume.html">Resumé</a></li>
       </ul>
     </li>
     <li><a>Contact/LinkedIn</a>
