--- a/Utilities/SocialMedia.html
+++ b/Utilities/SocialMedia.html
@@ -2,19 +2,19 @@
   <ul>
     <li>
       <a href="https://www.linkedin.com/in/david-hernandez7/">
-        <img src="../Pictures/linkedIn.png" alt="My LinkedIn Profile" width= "205px" height="70px">
+        <img src="../Pictures/LinkedIn.png" alt="My LinkedIn Profile" width= "205px" height="70px">
       </a>
     </li>
     <li>
       <a href="http://github.com/hernan363">
         <h1>
         GitHub
-        <img src="../Pictures/github.png" alt="My GitHub repository" height="100px" width="100px">
+        <img src="../Pictures/Github.png" alt="My GitHub repository" height="100px" width="100px">
       </a>
     </li>
     <li>
       <a HREF ="mailto:herna363@mail.chapman.edu">
-        <img src="../Pictures/email.png" alt="Email me!" width="150px" height="90px">
+        <img src="../Pictures/Email.png" alt="Email me!" width="150px" height="90px">
       </a>
     </li>
   </ul>
