--- a/Content/Resume.html
+++ b/Content/Resume.html
@@ -6,51 +6,58 @@
     <link href="CssFiles/Resume.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-
   </head>
 
 
   <body>
-    <div id="nav-placeholder">
-
+    <!-- imports the necessary ultilties -->
+    <div id="webpageTitle">
+    </div>
+    <div id="nav-bar">
     </div>
     <script>
-    $(function(){
-      $("#nav-placeholder").load("../Utilities/NavBar.html");
-    });
+      $(function(){
+        $("#nav-bar").load("../Utilities/NavBar.html");
+      });
     </script>
-    <div id="socialMedia">
-      <ul>
 
-        <li>
-          <a href="https://www.linkedin.com/in/david-hernandez7/">
-            <img src="../pictures/linkedIn.png" alt="My LinkedIn Profile" width= "205px" height="70px">
-          </a>
-        </li>
-        <li>
-          <a HREF="HTTPS://GITHUB.COM/HERNAN363">
-            <h1>
-            GitHub
-            <img src="../pictures/github.png" alt="My GitHub repository" height="100px" width="100px">
-          </a>
-        </h1>
-        </li>
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
 
-        <!-- <p>
-        <A HREF = "https://www.linkedin.com/in/david-hernandez7/"> LinkedIn </A>
-        </p> -->
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="../Pictures/Email.png" style="width:100%">
+        <div class="text">Caption Text</div>
+      </div>
 
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="../Pictures/Github.png" style="width:100%">
+        <div class="text">Caption Two</div>
+      </div>
 
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="../Pictures/LinkedIn.png" style="width:100%">
+        <div class="text">Caption Three</div>
+      </div>
 
-        <li>
-          <a HREF ="mailto:herna363@mail.chapman.edu">
-            <img src="../pictures/email.png" alt="Email me!" width="150px" height="90px">
-          </a>
-        </li>
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br/>
 
-      </ul>
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
+    <script type="text/javascript" src="Javascript/SlideShow.js">
+    </script>
 
   </body>
 </html
