--- a/Content/programs.html
+++ b/Content/programs.html
@@ -5,69 +5,25 @@
     <!-- <link href="https://www.chapman.edu/_files/css/style_2013.css" rel="sytlesheet"$ -->
     <link href="CssFiles/Programs.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
+    <!-- Import JavaScript -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
 
 
   <body>
-    <div id="navigation">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a>Skills</a>
-          <ul>
-            <li><a href="programs.html">Programs</a></li>
-            <li><a href="resume.html">Resumé</a></li>
-          </ul>
-        </li>
-        <li><a>Career</a>
-          <ul>
-            <li><a>Network Administrator</a></li>
-            <li><a>Major/Minor</a></li>
-          </ul>
-        </li>
-        <li><a>Contact</a>
-        </li>
-        <li><a>About</a>
-          <ul>
-            <li><a>Hobbies</a></li>
-            <li><a>Family</a></li>
-          </ul>
-        </li>
-      </ul>
+    <!-- imports the necessary ultilties -->
+    <div id="webpageTitle">
     </div>
-
-    <div id="socialMedia">
-      <ul>
-
-        <li>
-          <a href="https://www.linkedin.com/in/david-hernandez7/">
-            <img src="../pictures/linkedIn.png" alt="My LinkedIn Profile" width= "205px" height="70px">
-          </a>
-        </li>
-        <li>
-          <a HREF="HTTPS://GITHUB.COM/HERNAN363">
-            <h1>
-            GitHub
-            <img src="../pictures/github.png" alt="My GitHub repository" height="100px" width="100px">
-          </a>
-        </h1>
-        </li>
-
-        <!-- <p>
-        <A HREF = "https://www.linkedin.com/in/david-hernandez7/"> LinkedIn </A>
-        </p> -->
-
-
-
-        <li>
-          <a HREF ="mailto:herna363@mail.chapman.edu">
-            <img src="../pictures/email.png" alt="Email me!" width="150px" height="90px">
-          </a>
-        </li>
-
-      </ul>
+    <div id="nav-bar">
     </div>
-
-
+    <div id="social-media">
+    </div>
+    <script>
+      $(function(){
+        $("#nav-bar").load("../Utilities/NavBar.html");
+        $("#social-media").load("../Utilities/SocialMedia.html");
+      });
+    </script>
   </body>
 </html
