--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -1,5 +1,5 @@
 <!--Navigation bar -->
-<div id="navigation">
+<!-- <div id="navigation">
   <ul>
     <li><a href="Index.html">Home</a></li>
     <li><a>Career</a>
@@ -23,4 +23,20 @@
       </ul>
     </li>
   </ul>
+</div> -->
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="icon-bar">
+  <div class="home-tab">
+    <a id="home-tab-color" href="Index.html"><i class="fa fa-home"></i></a>
+  </div>
+  <a id="resume-tab" href="Resume.html">Interactive Resume</a>
+  <a id="aboutMe-tab" href="#">About Me</a>
+  <!-- Social Media -->
+  <div class="social-media">
+    <a href="https://www.linkedin.com/in/david-hernandez7/"><i class="fa fa-linkedin-square"></i></a>
+    <a href="http://github.com/hernan363"><i class="fa fa-github"></i></a>
+    <a href="mailto:herna363@mail.chapman.edu"><i class="fa fa-envelope"></i></a>
+  </div>
 </div>
