--- a/Content/resume.html
+++ b/Content/resume.html
@@ -20,14 +20,13 @@
         $("#nav-bar").load("../Utilities/NavBar.html");
       });
     </script>
-
+    
     <!-- Slideshow container -->
     <div class="slideshow-container">
-
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="../Pictures/Email.png" style="width:100%">
+        <img src="../Pictures/Email.png">
         <div class="text">Caption Text</div>
       </div>
 
@@ -46,16 +45,14 @@
       <!-- Next and previous buttons -->
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br/>
 
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
+      <!-- The dots/circles -->
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
     </div>
-
     <script type="text/javascript" src="Javascript/SlideShow.js">
     </script>
 
