--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -35,8 +35,8 @@
   <a id="aboutMe-tab" href="#">About Me</a>
   <!-- Social Media -->
   <div class="social-media">
-    <a href="https://www.linkedin.com/in/david-hernandez7/"><i class="fa fa-linkedin-square"></i></a>
-    <a href="http://github.com/hernan363"><i class="fa fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/david-hernandez7/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin-square"></i></a>
+    <a href="http://github.com/hernan363" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
     <a href="mailto:herna363@mail.chapman.edu"><i class="fa fa-envelope"></i></a>
   </div>
 </div>
