--- a/Content/resume.html
+++ b/Content/resume.html
@@ -20,7 +20,7 @@
         $("#nav-bar").load("../Utilities/NavBar.html");
       });
     </script>
-    
+
     <!-- Slideshow container -->
     <div class="slideshow-container">
       <!-- Full-width images with number and caption text -->
@@ -47,7 +47,7 @@
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
       <!-- The dots/circles -->
-      <div style="text-align:center">
+      <div id="dots">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
