--- a/Content/Index.html
+++ b/Content/Index.html
@@ -22,5 +22,22 @@
         $("#nav-bar").load("../Utilities/NavBar.html");
       });
     </script>
+    <section class="sidebar">
+      <ul>
+        <li>
+          <img src="../Pictures/GraduationPhoto.jfif" alt="fuck it broke">
+        </li>
+        <li>
+          <h1 id="job-status"></h1>
+        </li>
+
+        <li>
+          <p id="description"></p>
+        </li>
+        <li>
+        </li>
+      </ul>
+      <!-- <img id="profile-picture"></img> -->
+    </section>
   </body>
 </html
