--- a/Content/index.html
+++ b/Content/index.html
@@ -23,11 +23,11 @@
       });
     </script>
     <section class="sidebar">
-      <ul>
-        <li>
-          <img src="../Pictures/GraduationPhoto.jfif" alt="fuck it broke">
-        </li>
-        <li>
+        <img src="../Pictures/GraduationPhoto.jfif" alt="fuck it broke"></img>
+        <span id="circle"></span>
+        <h1 style="display: inline-block; color: black;">Looking for a new Job</h1>
+        <!-- set the looking for a new job below the profile picture -->
+        <!-- <li>
           <h1 id="job-status"></h1>
         </li>
 
@@ -35,8 +35,7 @@
           <p id="description"></p>
         </li>
         <li>
-        </li>
-      </ul>
+        </li> -->
       <!-- <img id="profile-picture"></img> -->
     </section>
   </body>
