adding hyperlinks to the file paths

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <meta charset="utf-8">
     <title>David Hernandez</title>
     <!-- <link href="https://www.chapman.edu/_files/css/style_2013.css" rel="sytlesheet"$ -->
-    <link href="Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
+    <link href="https://hernan363.github.io/AWS-Website/Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"
     http-equiv="refresh" content="5">
 
     <!-- Import JavaScript -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
 
   </head>
@@ -21,11 +21,11 @@
     </div>
     <script>
       $(document).ready($(function(){
-        $("#nav-bar").load("Utilities/NavBar.html");
+        $("#nav-bar").load("https://hernan363.github.io/AWS-Website/Utilities/NavBar.html");
       }));
     </script>
     <section class="left-sidebar">
-        <img src="Pictures/GraduationPhoto.jfif" alt="fuck it broke"></img>
+        <img src="https://hernan363.github.io/AWS-Website/Pictures/GraduationPhoto.jfif" alt="fuck it broke"></img>
         <span>
           <span id="circle"></span>
           <h3 style= "display: inline-block; color: white;">Job Searching</h3>
