fixed hyperlinks to work with local documents as well as online documents. rearranged the opening page sections and decided to make the center a welcoming title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>David Hernandez</title>
     <!-- <link href="https://www.chapman.edu/_files/css/style_2013.css" rel="sytlesheet"$ -->
-    <link href="https://hernan363.github.io/AWS-Website/Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
+    <link href="./Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"
     http-equiv="refresh" content="5">
 
@@ -24,35 +24,47 @@
         $("#nav-bar").load("https://hernan363.github.io/AWS-Website/Utilities/NavBar.html");
       }));
     </script>
-    <section class="left-sidebar">
-        <img src="https://hernan363.github.io/AWS-Website/Pictures/GraduationPhoto.jfif" alt="fuck it broke"></img>
-        <span>
-          <span id="circle"></span>
-          <h3 style= "display: inline-block; color: white;">Job Searching</h3>
-        </span>
-        <span class="fa fa-map-marker"id="location">
-          <h3 style="margin: 0px 5px; display: inline-block;">Irvine, California</h3>
-        </span>
-        <span class ="fa fa-book">
-          <h3>2 Years of Industry Exposure</h3>
-        </span>
-         <!-- set the looking for a new job below the profile picture -->
-         <!-- <li>
-          <h1 id="job-status"></h1>
-        </li>
+    <div id="main-content">
+      <section id="left-sidebar">
+        <div class="border">
+          <img src="./Pictures/GraduationPhoto.jfif" alt="fuck it broke"></img>
+          <span>
+            <span id="circle"></span>
+            <h3 style= "display: inline-block; color: white;">Job Searching</h3>
+          </span>
+          <span class="fa fa-map-marker"id="location">
+            <h3 style="margin: 0px 5px; display: inline-block;">Irvine, California</h3>
+          </span>
+          <span class ="fa fa-book">
+            <h3>2.5 Years of Industry Exposure</h3>
+          </span>
+        </div>
+           <!-- set the looking for a new job below the profile picture -->
+           <!-- <li>
+            <h1 id="job-status"></h1>
+          </li>
 
-        <li>
-          <p id="description"></p>
-        </li>
-        <li>
-        </li>
-      <img id="profile-picture"></img> -->
-    </section>
-    <section class="right-side">
-      <span>
-        <h3>Phone: (909) 436 - 6189</h3>
-        <h3>E-Mail: herna363@mail.chapman.edu</h3>
-      </span>
-    </section>
+          <li>
+            <p id="description"></p>
+          </li>
+          <li>
+          </li>
+        <img id="profile-picture"></img> -->
+      </section>
+
+      <section id="Title">
+        <div class="border">
+          <h1>Welcome to my Website!</h1>
+        </div>
+      </section>
+      <section id="right-side">
+        <div class="border">
+          <span>
+            <h3>Phone: (909) 436 - 6189</h3>
+            <h3>E-Mail: herna363@mail.chapman.edu</h3>
+          </span>
+        </div>
+      </section>
+    </div>
   </body>
 </html
