adding the DH image to the website tab

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"
     http-equiv="refresh" content="5">
+    <link rel = "icon" type = "image/png" href = "./Pictures/DH.png">
 
     <!-- Import JavaScript -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
@@ -27,7 +28,7 @@
     <div id="main-content">
       <section id="left-sidebar">
         <div class="border">
-          <img src="./Pictures/GraduationPhoto.jfif" alt="fuck it broke"></img>
+          <img src="./Pictures/GraduationPhoto.jfif" alt="Image is currently lost"></img>
           <span>
             <span id="circle"></span>
             <h3 style= "display: inline-block; color: white;">Job Searching</h3>
