editing navigation toolbar

--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -31,8 +31,8 @@
   <div class="home-tab">
     <a id="home-tab-color" href="Index.html"><i class="fa fa-home"></i></a>
   </div>
-  <a id="resume-tab" href="Resume.html">Interactive Resume</a>
-  <a id="aboutMe-tab" href="#">About Me</a>
+  <a id="resume-tab" href="./Content/CssFiles/Resume.html">General Atomics<i class="fa fa-airplane"></i></a>
+  <a id="aboutMe-tab" href="#">Hobbies</a>
   <!-- Social Media -->
   <div class="social-media">
     <a href="https://www.linkedin.com/in/david-hernandez7/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin-square"></i></a>
