--- a/index.html
+++ b/index.html
@@ -67,5 +67,10 @@
         </div>
       </section>
     </div>
+    <div id="summary" class="border">
+      <p>
+        A little bit about me, I started working at General Atomics right after college.
+      </p>
+    </div>
   </body>
 </html
