Added a footer and rearranged some information

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <span id="circle"></span>
             <h3 style= "display: inline-block; color: white;">Job Searching</h3>
           </span>
-          <span class="fa fa-map-marker"id="location">
+          <!-- <span class="fa fa-map-marker"id="location">
             <h3 style="margin: 0px 5px; display: inline-block;">Irvine, California</h3>
           </span>
           <span class ="fa fa-book">
             <h3>2.5 Years of Industry Exposure</h3>
-          </span>
+          </span> -->
         </div>
            <!-- set the looking for a new job below the profile picture -->
            <!-- <li>
@@ -53,24 +53,30 @@
         <img id="profile-picture"></img> -->
       </section>
 
-      <section id="Title">
+      <section id="text-paragraph">
         <div class="border">
           <h1>Welcome to my Website!</h1>
         </div>
       </section>
-      <section id="right-side">
+      <!-- <section id="right-side">
         <div class="border">
           <span>
             <h3>Phone: (909) 436 - 6189</h3>
             <h3>E-Mail: herna363@mail.chapman.edu</h3>
           </span>
         </div>
-      </section>
+      </section> -->
     </div>
-    <div id="summary" class="border">
+    <!-- <div id="summary" class="border">
       <p>
         A little bit about me, I started working at General Atomics right after college.
       </p>
+    </div> -->
+    <div id="footer-bar">
     </div>
+    <script>
+      $(document).ready($(function(){
+        $("#footer-bar").load("https://hernan363.github.io/AWS-Website/Utilities/Footer.html");
+      }));
   </body>
 </html
