--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
       $(document).ready($(function(){
         $("#footer-bar").load("https://hernan363.github.io/AWS-Website/Utilities/Footer.html");
       }));
+    </script>
   </body>
 </html
