--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -37,6 +37,6 @@
   <div class="social-media">
     <a href="https://www.linkedin.com/in/david-hernandez7/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin-square"></i></a>
     <a href="http://github.com/hernan363" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
-    <a href="mailto:herna363@mail.chapman.edu"><i class="fa fa-envelope"></i></a>
+    <a href="https://leetcode.com/davidHernandez7/"><i class="fa fa-code"></i></a>
   </div>
 </div>
