editing the text-paragraph with what I want to recruiter to see

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
   <head>
-    <meta charset="utf-8">
+    <!-- title -->
     <title>David Hernandez</title>
-    <!-- <link href="https://www.chapman.edu/_files/css/style_2013.css" rel="sytlesheet"$ -->
-    <link href="./Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+
+    <!-- meta data -->
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"
     http-equiv="refresh" content="5">
-    <link rel = "icon" type = "image/png" href = "./Pictures/DH.png">
+
+    <!-- links -->
+    <link href="./Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
+    <link rel = "icon" type = "image/png" href = "./Pictures/DH.png"/>
 
     <!-- Import JavaScript -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
-
   </head>
 
+  <!-- Body/All of the Main Content -->
   <body>
-    <!-- imports the necessary ultilties -->
-    <div id="webpageTitle">
-    </div>
+    <!-- Nav Bar -->
     <div id="nav-bar">
     </div>
     <script>
@@ -25,7 +25,10 @@
         $("#nav-bar").load("https://hernan363.github.io/AWS-Website/Utilities/NavBar.html");
       }));
     </script>
+
     <div id="main-content">
+
+      <!-- Profile Picture and Job Status -->
       <section id="left-sidebar">
         <div class="border">
           <img src="./Pictures/GraduationPhoto.jfif" alt="Image is currently lost"></img>
@@ -33,45 +36,38 @@
             <span id="circle"></span>
             <h3 style= "display: inline-block; color: white;">Job Searching</h3>
           </span>
-          <!-- <span class="fa fa-map-marker"id="location">
-            <h3 style="margin: 0px 5px; display: inline-block;">Irvine, California</h3>
-          </span>
           <span class ="fa fa-book">
             <h3>2.5 Years of Industry Exposure</h3>
-          </span> -->
-        </div>
-           <!-- set the looking for a new job below the profile picture -->
-           <!-- <li>
-            <h1 id="job-status"></h1>
-          </li>
-
-          <li>
-            <p id="description"></p>
-          </li>
-          <li>
-          </li>
-        <img id="profile-picture"></img> -->
-      </section>
-
-      <section id="text-paragraph">
-        <div class="border">
-          <h1>Welcome to my Website!</h1>
-        </div>
-      </section>
-      <!-- <section id="right-side">
-        <div class="border">
-          <span>
-            <h3>Phone: (909) 436 - 6189</h3>
-            <h3>E-Mail: herna363@mail.chapman.edu</h3>
           </span>
         </div>
-      </section> -->
+      </section>
+
+      <!-- Main Paragraph -->
+      <section id="text-paragraph">
+        <div class="border">
+          <h1>Welcome!</h1>
+          <h4>I created this to capture all of my experience, projects and training thus far in my life. <br>
+            
+            <br><br>
+
+            <b><h2>What am I looking for in my next opportunity?</b></h2><br>
+            I'm looking for a team that has proven to produce an intuitive, and well designed product.<br>
+            I know I have much to learn going forward, and want to make sure I stay up to date with industry best practices. <br>
+            I would like to be in a remote position since I see myself moving cities in the future.
+
+            <br><br>
+
+            <b><h2>Where do I see myself in 5 years?</b></h2><br>
+            I see myself working on a product that I can personally use and interact with.<br>
+            I'm invested in making the product the best it can be, and enjoy watching others use it.<br>
+            I see myself growing as an engineer and challenging myself everyday. <br>
+            I'm taking on leadership roles and passing down the patience and knowledge that what was given to me. <br>
+          </h4>
+        </div>
+      </section>
     </div>
-    <!-- <div id="summary" class="border">
-      <p>
-        A little bit about me, I started working at General Atomics right after college.
-      </p>
-    </div> -->
+
+    <!-- Footer -->
     <div id="footer-bar">
     </div>
     <script>
