footer email path

--- a/Utilities/Footer.html
+++ b/Utilities/Footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
   <p class="fa fa-phone"> (909) 436 - 6189</p>
-  <p class="fa fa-envelope" href="mailto:herna363@mail.chapman.edu">email me</a>"> herna363@mail.chapman.edu</p>
+  <p class="fa fa-envelope" href="mailto:herna363@mail.chapman.edu"> herna363@mail.chapman.edu</p>
   <p class="fa fa-map-marker"> Irvine, California or Remote</p>
 </div>
