deleted unnecessary files and started new

--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -1,38 +1,16 @@
 <!--Navigation bar -->
-<!-- <div id="navigation">
-  <ul>
-    <li><a href="Index.html">Home</a></li>
-    <li><a>Career</a>
-      <ul>
-        <li id="generalAtomics"><a>General Atomics</a></li>
-        <li id="chapman"><a>Chapman University</a></li>
-      </ul>
-    </li>
-    <li><a>Accomplishments</a>
-      <ul>
-        <li><a href="Programs.html">Programs</a></li>
-        <li><a href="Resume.html">Resumé</a></li>
-      </ul>
-    </li>
-    <li><a>Contact/LinkedIn</a>
-    </li>
-    <li><a>About</a>
-      <ul>
-        <li><a>Hobbies</a></li>
-        <li><a>Family</a></li>
-      </ul>
-    </li>
-  </ul>
-</div> -->
-
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="icon-bar">
+
+  <!-- Home -->
   <div class="home-tab">
     <a id="home-tab-color" href="Index.html"><i class="fa fa-home"></i></a>
   </div>
-  <a id="resume-tab" href="./Content/CssFiles/Resume.html">General Atomics<i class="fa fa-airplane"></i></a>
+
+  <!-- Different Tabs -->
+  <a id="resume-tab" href="./Content/CssFiles/GeneralAtomics.html">General Atomics<i class="fa fa-airplane"></i></a>
   <a id="aboutMe-tab" href="#">Hobbies</a>
+
   <!-- Social Media -->
   <div class="social-media">
     <a href="https://www.linkedin.com/in/david-hernandez7/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin-square"></i></a>
