--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <section id="text-paragraph">
         <div class="border">
           <h1>Welcome!</h1>
-          <h4>I created this to capture all of my experience, projects and training thus far in my life. <br>
-            
+          <h4>I'm currently a Software Developer II at General Atomics and I'm open to opportunities!<br>
+
             <br><br>
 
             <b><h2>What am I looking for in my next opportunity?</b></h2><br>
@@ -76,4 +76,4 @@
       }));
     </script>
   </body>
-</html
+</html>
