--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -8,7 +8,7 @@
   </div>
 
   <!-- Different Tabs -->
-  <a id="resume-tab" href="./Content/CssFiles/GeneralAtomics.html">General Atomics<i class="fa fa-airplane"></i></a>
+  <a id="GA-tab" href="./Content/GeneralAtomics.html">General Atomics<i class="fa fa-plane"></i></a>
   <a id="aboutMe-tab" href="#">Hobbies</a>
 
   <!-- Social Media -->
