adding images and trying to arrange General Atomics page

--- a/Content/GeneralAtomics.html
+++ b/Content/GeneralAtomics.html
@@ -14,8 +14,17 @@
     <!-- Import JavaScript -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
   </head>
-  
+
   <body>
+    <section id="GA-About">
+      
+    </section>
+    <section id="GA-Tools">
+
+    </section>
+    <section id="GA-Lessons">
+
+    </section>
 
   </body>
 </html>
