adding generalAtomics.css to the html file

--- a/Content/GeneralAtomics.html
+++ b/Content/GeneralAtomics.html
@@ -8,7 +8,7 @@
     http-equiv="refresh" content="5">
 
     <!-- links -->
-    <link href="./Content/CssFiles/Index.css" rel="stylesheet" type="text/css"/>
+    <link href="./CssFiles/GeneralAtomics.css" rel="stylesheet" type="text/css"/>
     <link rel = "icon" type = "image/png" href = "../Pictures/DH.png"/>
 
     <!-- Import JavaScript -->
