making file paths static since I abstracted the toolbar out

--- a/Utilities/NavBar.html
+++ b/Utilities/NavBar.html
@@ -4,11 +4,11 @@
 
   <!-- Home -->
   <div class="home-tab">
-    <a id="home-tab-color" href="Index.html"><i class="fa fa-home"></i></a>
+    <a id="home-tab-color" href="https://hernan363.github.io/AWS-Website/index.html"><i class="fa fa-home"></i></a>
   </div>
 
   <!-- Different Tabs -->
-  <a id="GA-tab" href="./Content/GeneralAtomics.html" class="fa fa-plane"> General Atomics</a>
+  <a id="GA-tab" href="https://hernan363.github.io/AWS-Website/Utilities/Content/GeneralAtomics.html" class="fa fa-plane"> General Atomics</a>
   <a id="aboutMe-tab" href="#">Hobbies</a>
 
   <!-- Social Media -->
