creating the General Atomics Page.

--- a/Content/GeneralAtomics.html
+++ b/Content/GeneralAtomics.html
@@ -21,15 +21,33 @@
     </div>
 
     <section id="GA-About">
-
+      <div id="GA-About-Image">
+        <ol> Skills established:
+          <li><b>Languages:</b><br> C#, Json, and Xaml</li>
+          <li><b>Source Control:</b><br> Git and Team Foundation <br> Version Control <br>using Visual Studio</li>
+          <li><b>Database:</b><br> MongoDB</li>
+          <li><b>Message Broker:</b><br> Reddis</li>
+          <li><b>Software Architecture:</b><br>Micro Services and Monolithic</li>
+        </ol>
+      </div>
     </section>
 
     <section id="GA-Tools">
-
+      <div id="GA-Tools-Image">
+        <ol> Responsibilities:
+          <li><b>Debugging:</b><br></li>
+          <li><b>Designing:</b><br></li>
+          <li><b>Assisting Others:</b><br></li>
+          <li><b>Testing:</b><br> </li>
+          <li><b>Peer Reviews:</b><br> </li>
+        </ol>
+      </div>
     </section>
-    
-    <section id="GA-Lessons">
 
+    <section id="GA-Lessons">
+      <div id="GA-Lessons-Image">
+        <p>Hello there this is a long line for a test.</p>
+      </div>
     </section>
 
     <!-- Footer -->
